[package]
name = "converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
csv = "1.3.0"
eframe = "0.24.1"
rfd = "0.12.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_path_to_error = "0.1.15"
time = { version = "0.3.31", features = ["local-offset", "macros", "formatting"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
